--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -8,7 +8,7 @@ header.header
                 input(type="text", placeholder="Search by term...", name="term")
         .header__column
             ul 
-                if !user.isAuthenticated
+                if !user
                     li 
                         a(href=routes.join) Join 
                     li 
@@ -19,5 +19,5 @@ header.header
                     li 
                         a(href=routes.userDetail(user.id)) Profile
                     li 
-                        a(href=routes.logout) Log Out
+                        a(href=routes.logout) Logout
                     
