--- a/assets/scss/partials/videoPlayer.scss
+++ b/assets/scss/partials/videoPlayer.scss
@@ -40,21 +40,20 @@
       z-index: 10;
       width: 80px;
 
-      input {
-        background-color: rgba(0, 0, 0, 0.7);
-        &::-webkit-slider-runnable-track {
-          background-color: $grey;
-          height: 5px;
-        }
-        &::-webkit-slider-thumb {
-          all: unset;
-          background-color: $red;
-          height: 15px;
-          width: 15px;
-          border-radius: 50%;
-          position: relative;
-          top: -5px;
-        }
+      -webkit-appearance: none;
+      &::-webkit-slider-runnable-track {
+        background-color: $grey;
+        height: 5px;
+      }
+      &::-webkit-slider-thumb {
+        -webkit-appearance: none;
+
+        background-color: $red;
+        height: 15px;
+        width: 15px;
+        border-radius: 50%;
+        position: relative;
+        top: -5px;
       }
     }
     .videoPlayer__column:last-child {
