--- a/assets/scss/partials/videoPlayer.scss
+++ b/assets/scss/partials/videoPlayer.scss
@@ -1,5 +1,6 @@
 .videoPlayer {
   position: relative;
+  margin: 20px;
   &:hover {
     .videoPlayer__controls {
       opacity: 1;
@@ -8,7 +9,6 @@
   video {
     width: 100%;
     max-width: 100%;
-    height: 600px;
   }
   .videoPlayer__controls {
     opacity: 0;
